# pants-applications

./: Makefile  README.md  Taskfile.yml  pants.toml
build-support/: bandit.yaml  pyproject.toml
docker/test/: docker-compose.yml
src/protos/calc/v1/: BUILD  calc.proto
src/python/asyncio-cpu-test/: BUILD  pyproject.toml
src/python/asyncio-cpu-test/asyncio_cpu_test/: BUILD  main.py
src/python/ddtrace-app/: BUILD  pyproject.toml
src/python/ddtrace-app/ddtrace_app/: main.py
src/python/dep-test/: BUILD  pyproject.toml
src/python/dep-test/dep_test/: main.py
src/python/grpc-client/: BUILD  README.md  pyproject.toml
src/python/grpc-client/grpc_client/: main.py
src/python/grpc-client/tests/: a_test.py
src/python/grpc-server/: BUILD  Dockerfile  README.md  pyproject.toml
src/python/grpc-server/grpc_server/: main.py
src/python/grpc-server/grpc_server/controller/: calc_servicer.py
src/python/grpc-server/tests/controller/: calc_servicer_test.py
src/python/kinesis-consumer/: BUILD  Dockerfile  Makefile  app.properties  pyproject.toml  requirements.txt  run.sh  set_properties.py
src/python/kinesis-consumer/develop/: docker-compose.yml  export.sh  run.sh
src/python/kinesis-consumer/develop/localstack-scripts/: init.sh
src/python/kinesis-consumer/kinesis_consumer/: main.py  sequence_number_pair.py
src/python/kinesis-consumer/kinesis_consumer/domain/: sequence_number.py
src/python/kinesis-consumer/kinesis_consumer/service/: app_service.py  consumer.py  multiprocess_gateway.py
src/python/kinesis-consumer/local/: export.sh  logback.xml  record_processor.properties
src/python/kinesis-consumer/tests/: sequence_number_pair_test.py
src/python/kinesis-producer/: BUILD  Dockerfile  Makefile  pyproject.toml
src/python/kinesis-producer/kinesis_producer/: main.py
src/python/layout-packed/: BUILD  Dockerfile  Makefile  pyproject.toml
src/python/layout-packed/layout_packed/: main.py
src/python/layout-zipapp/: BUILD  Dockerfile  Makefile  README.md  pyproject.toml
src/python/layout-zipapp/layout_zipapp/: main.py
src/python/lib-logging/: BUILD  pyproject.toml
src/python/lib-logging/lib_logging/: custom_logger.py  json_formatter.py
src/python/lib-logging/tests/: custom_logger_test.py
src/python/lib-pydantic-v1/: BUILD  pyproject.toml
src/python/lib-redis/: BUILD  pyproject.toml
src/python/lib-redis/lib_redis/: redis.py  redis_client.py
src/python/multiprocessing-app/: BUILD  Dockerfile  pyproject.toml
src/python/multiprocessing-app/multiprocessing_app/: main.py  worker.py
src/python/multiprocessing-app/tests/: a_tset.py
src/python/multithreading-app/: BUILD  pyproject.toml
src/python/multithreading-app/multithreading_app/: main.py
src/python/multithreading-app/tests/: main_test.py
src/python/redis-client/: BUILD  README.md  pyproject.toml
src/python/redis-client/local/: docker-compose.yml
src/python/redis-client/redis_client/: main.py
src/python/redis-list-consumer/: BUILD  pyproject.toml
src/python/redis-list-consumer/redis_list_consumer/: main.py
src/python/redis-list-consumer/redis_list_consumer/gateway/: redis_list_consumer.py
src/python/redis-list-producer/: pyproject.toml
src/python/redis-publisher/: BUILD  pyproject.toml
src/python/redis-publisher/redis_publisher/gateway/: redis_client.py
src/python/redis-publisher/tests/: conftest.py
src/python/redis-publisher/tests/gateway/: redis_client_test.py
src/python/sqs-consumer/: BUILD  README.md  pyproject.toml
src/python/sqs-consumer/local/: docker-compose.yml  export.sh
src/python/sqs-consumer/local/localstack-scripts/: init.sh
src/python/sqs-consumer/sqs_consumer/: main.py
src/python/sqs-consumer/sqs_consumer/gateway/: sqs_consumer.py
src/python/sqs-consumer/tests/gateway/: sqs_consumer_test.py
src/python/sqs-producer/: pyproject.toml
