[tool.poetry]
name = "grpc-server"
version = "0.1.0"
description = ""
authors = ["pecolynx <pecolynx@gmail.com>"]
readme = "README.md"
packages = [{include = "grpc_server"}]

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.62.1"
protobuf = "^5.26.0"
grpcio-testing = "^1.62.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
