[tool.poetry]
name = "lib-redis"
version = "0.1.0"
description = ""
authors = ["pecolynx <pecolynx@gmail.com>"]
readme = "README.md"
packages = [{include = "lib_redis"}]

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.3"
types-redis = "^4.6.0.20240417"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
